html/css/styles.css
/*
Table of content
1.0 (re)init
2.0 colors and fonts
3.0 containers
    3.1 flex
    3.2 sizes
    3.3 margins / paddings
4.0 header
    4.1 navbar
    4.2 banner
5.0 content
6.0 media queries
*/

/*------------------------------------*/
/*    1.0 (re)init                    */
/*------------------------------------*/

body, ul
{
    margin: 0;
    padding: 0;
}

/*------------------------------------*/
/*    2.0 Colors and fonts            */
/*------------------------------------*/

/* Color scheme
#BF8511
#F5DE88
#CECFC1
#28687E
#1A2123
*/

:root {
    --color-main: #bf8511;
    --color-main-light: #F5DE88;
    --color-complementary: #538698;
    --color-light: #CECFC1;
    --color-lighter: #F9FAF2;
    --color-dark: #1A2123;
}

body
{
    font-family: 'Roboto Slab', serif;
    font-size: 1em;
    background: #FFF url('../images/cream_pixels.png') top left repeat;
}

h2, h3, h4, h5, h6
{
    font-family: Lato, sans-serif;
    font-weight: 100;
}

h2
{
    font-size: 6em;
}

h3
{

    font-size: 4em;
}
h4
{
    font-size: 2.5em;
}
h5
{
    font-size: 1.8em;
}

/*------------------------------------*/
/*    3.0 containers                  */
/*------------------------------------*/

div
{
    overflow: hidden;
}

.hidden
{
    display: none !important;
}

/*------------------------------------*/
/*    3.1 flex                        */
/*------------------------------------*/

.flex-container
{
    display: flex;
}

.flex-justify-center
{
    justify-content: center;
}

.flex-justify-left
{
    justify-content: flex-start;
}

.flex-justify-right
{
    justify-content: flex-end;
}

.flex-justify-between
{
    justify-content: space-between;
}

.flex-wrap
{
    flex-wrap: wrap;
}

.flex-wrap-reverse
{
    flex-wrap: wrap-reverse;
}

.text-align-right
{
    text-align: right;
}

.flex-items-center
{
    align-items: center;
}

.flex-justify-around
{
    justify-content: space-around;
}

.flex-separate-right
{
    margin-left: auto;
}

.flex-columns
{
    flex-direction: column;
}

/*------------------------------------*/
/*     3.2 size                       */
/*------------------------------------*/

.half-width
{
    width: 43vw;
    margin: 30px 3vw;
    min-width: 480px;
}

.third-width
{
    width: 27vw;
    margin: 30px 2.5vw;
    min-width: 336px;
}

.fourth-width
{
    width: 21vw;
    margin: 30px 1.8vw;
    min-width: 260px;
    max-width: 300px;
}

.fifth_width
{
    width: 17vw;
    margin: 30px 1.5vw;
    min-width: 190px;
}

.full-height
{
    min-height: 100vh;
    padding-top: 30px;
}

/*------------------------------------*/
/*     3.2 size                       */
/*------------------------------------*/

.mb-1
{
    margin-bottom: 1em;
}

.mb-2
{
    margin-bottom: 2em;
}

.ml-1
{
    margin-left: 1em;
}

/*------------------------------------*/
/*     4.0 header                     */
/*------------------------------------*/

header
{
    margin-bottom: 79px;
}

/*------------------------------------*/
/*     4.1 navBar                     */
/*------------------------------------*/
.sticky-top
{
    position: fixed;
    top: 0px;
    width: 100vw;
    z-index: 999;
}

.navbar-background
{
    position: fixed;
    width: 100vw;
    height: 79px;
    transition: height 0.8s;
    top: 0px;
    left: 0px;
    background-color: var(--color-dark);
    opacity: 0.9;
    z-index: -1;
}

.navbar-container
{
    margin: 0 1em;
}

nav li
{
    text-align: center;
    padding: 10px 10px;
    margin: 5px;
    width: 65px;
    border-radius: 4px;
    border: 2px solid #0000;
}

.navbar-link-active
{
    /* background-color: var(--color-main); */
    border: 2px solid var(--color-light);
    box-shadow: 0px 0px 3px var(--color-main-light);
}

.topbar-link:hover a, .topbar-link:hover
{
    color: var(--color-light);
}

nav a
{
    text-decoration: none;
    color: var(--color-lighter);
    font-family: Lato, sans-serif;
    text-shadow: 4px 4px 0.8px var(--color-dark);
}

.list-no-style
{
    list-style: none;
}

.navbar-icon
{
    min-width: 60px;
    height: 60px;
    background: black url('../images/avatar.jpg') center center no-repeat;
    background-size:cover;
    border-radius: 50%;
}

.menu-burgerized
{
    flex-direction: column;
    height: 50px;
    width: auto;
}

[data-navbar="master"]
{
    height: 79px;
}

[data-navbar="master"].menu-expanded
{
    height: 300px;
    transition: height 1.3s;
    align-items: flex-start;
    margin-top: 10px;
}

[data-navbar="background"].menu-expanded
{
    top: 0px;
    transition: height 0.8s;
    height: 300px;
}

[data-navbar="container"].menu-expanded
{
    margin-top: 5px;
}

[data-navbar="button"].menu-expanded
{
    margin-top: 5px;
}

.burger-button
{
    color: var(--color-light);
    font-size: 2.3em;
    margin-right: 15px;
}

/*------------------------------------*/
/*     4.2 banner                     */
/*------------------------------------*/

.top-banner
{
    height: 100vh;
    background: black;
    overflow: hidden;
}

.cube
{
    position: absolute;
    
}

.banner-title
{
    text-shadow: 0px 0px 3px var(--color-dark);
    text-align: center;

    color: var(--color-lighter);
    text-transform: uppercase;
    font-family: Lato, sans-serif;
    font-weight: 100;
    font-size: 7em;

    /* background-color: #2222224e;
    border-radius: 50px;
    box-shadow: 0px 0px 20px 20px #2222224e; */

    position: absolute;
}

.social-icon
{
    padding: 0;
    width: auto;
    margin-right: 30px;
}

.social-icon .topbar-link
{
    margin: 0 5px;
}

/*------------------------------------*/
/*    5.0 content                     */
/*------------------------------------*/

.work-min-container
{
    overflow: hidden;
    min-height: 336px;
}

.work-min-container img
{
    height: 100%;
    min-height: 336px;
    max-height: 28vw;
}

.section-1-background
{
    background-color: #CCCCC6;
}

.section-1-background h3
{
    text-align: center;
    align-self: baseline;
    flex-basis: 100%;
    order: -5;
}

.project-tile
{
    background: url('../images/paper_bg.png');
    height: 27vw;
    min-height: 345px;
    max-height: 380px;
    box-shadow: 1px 1px 1px 1px #999;
    cursor: pointer;
}

.project-caption
{
    color: var(--color-dark);
    opacity: 0.7;
    align-self: center;
    margin: auto 0; /* vertical center */
}

.project-thumbnail
{
    display: flex;
    align-items: center;
    margin-top: 5%;
    margin-left: 5%;
    width: 90%;
    height: 78%;
    background-color: var(--color-dark)
}

.project-thumbnail img
{
    text-align: center;
    color: var(--color-light);
    width: 100%;
    margin: auto;
}

[data-work].active
{
    flex-basis: 20%;
    margin-top: auto;
}

.closing-cross
{
    content: '✖';
    font-size: 2em;
    text-align: center;
    line-height: 40px;
    width: 40px;
    height: 40px;
    cursor: pointer;
    display: block;
    margin-left: auto;
}

[data-work].min
{
    width: 80px;
    min-width: 80px;
    max-width: 80px;
    height: 105px;
    min-height: 105px;
    max-height: 105px;
}

[data-work].min .project-caption
{
    display: none;
}

.project-preview
{
    background: var(--color-lighter) url('../images/paper_bg.png');
    bottom: 0;
    left: 0;
    width: 0;
    height: 0;
    transition: .8s all;
}

.project-preview-iframe
{
    width: 97%;
    height: 97%;
}

.project-preview-iframe iframe
{
    width: 100%;
    height: 93%
}

break
{
    flex-basis: 100%;
    order: -1;
}

.section-2-background
{
    background-color: var(--color-complementary);
    margin-top: 79px;
    margin-bottom: 79px;
}

.section-2-background h3
{
    text-align: center;
    color: var(--color-light);
    text-shadow: 4px 4px 2px var(--color-dark);
}

.about-me
{
    text-align: right;
}

.about-me .h3
{
    text-align: right;
}

.about-me img
{
    width: 100%;
    margin-top: -163px;
    filter: contrast(150%);
}

.myface-container
{
    border-radius: 200px;
    background-color: #000;
    max-width: 336px;
}

.skills-container
{
    background-color: var(--color-light);
    opacity: 0.7;
}

.skills-container ul
{
    list-style-type: none;
}

.skills-container h4
{
    text-align: center;
}

.skills-list
{
    position: relative;
    text-align: left;
    font-size: 1.2em;
    list-style-type: none;
    display: inline-block;
    margin-bottom: 55px;
    margin: auto;
    padding-bottom: 50px;
}

.skills-container .courses p
{
    margin-left: 25px;
}

/*------------------------------------*/
/*    6.0    footer                   */
/*------------------------------------*/

.footer-background
{
    background-color: var(--color-dark);
    padding-bottom: 60px;
}

.footer-background h3,
.footer-background h4,
.footer-background p,
.footer-background a
{
    text-decoration: none;
    color: var(--color-light);
}

.footer-background a:hover
{
    color: var(--color-main);
}

/*------------------------------------*/
/*    7.0 media queries               */
/*------------------------------------*/

@media screen
and (max-width: 800px)
{
    .banner-title
    {
        font-size: 4.1em;
    }
    h3
    {
        font-size: 3.1em;
    }
    .full-width
    {
        min-width: 80vw;
    }
    .half-width
    {
        min-width: 80vw;
    }
    .third-width
    {
        min-width: 80vw;
    }
}

